sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/Renconciling_Object__c.object-meta.xml
<CustomObject>
    <label>SPR Reconciliation</label>
    <nameField>
        <displayFormat>RECON-{000000}</displayFormat>
        <label>Renconciling Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPR Reconciliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>