sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/Date_c__c.field-meta.xml
<CustomField>
    <fullName>Date_c__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>