sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/DIM1__c.field-meta.xml
<CustomField>
    <fullName>DIM1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIM1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>SPR Reconciliations</relationshipLabel>
    <relationshipName>SPR_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>