sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>SPR Reconciliations (Dimension 1)</relationshipLabel>
    <relationshipName>SPR_Reconciliations1</relationshipName>
    <type>Lookup</type>
</CustomField>