sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Expense_Description__c</fullName>
    <label>Expense Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>