sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/General_Ledger_Account__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Ledger Account</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>SPR Reconciliations (General Ledger Account)</relationshipLabel>
    <relationshipName>SPR_Reconciliations1</relationshipName>
    <type>Lookup</type>
</CustomField>