sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/GLA__c.field-meta.xml
<CustomField>
    <fullName>GLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GLA</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>SPR Reconciliations</relationshipLabel>
    <relationshipName>SPR_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>