sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/Item_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Item_Amount_c__c</fullName>
    <label>Item Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>