sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/KRA_Pin__c.field-meta.xml
<CustomField>
    <fullName>KRA_Pin__c</fullName>
    <label>KRA Pin</label>
    <length>250</length>
    <type>Text</type>
</CustomField>