sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/Recon_Approved__c.field-meta.xml
<CustomField>
    <fullName>Recon_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reconciliation Approved</description>
    <inlineHelpText>Reconciliation Approved</inlineHelpText>
    <label>Recon Approved</label>
    <type>Checkbox</type>
</CustomField>