sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/Special_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Payment_Request__c</fullName>
    <label>Special Payment Request</label>
    <referenceTo>Special_Procurement__c</referenceTo>
    <relationshipLabel>SPR Reconciliations</relationshipLabel>
    <relationshipName>SPR_Reconciliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>