sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/Supplier_c__c.field-meta.xml
<CustomField>
    <fullName>Supplier_c__c</fullName>
    <label>Supplier</label>
    <length>225</length>
    <type>Text</type>
</CustomField>