sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/Transaction_Charge__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Charge__c</fullName>
    <label>Transaction Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>