sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>