sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/validationRules/Reconciliation_KRA_Pin_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Reconciliation_KRA_Pin_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK( VAT__c ) ) , ISBLANK( KRA_Pin__c ) )</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Please Provide KRA PIN</errorMessage>
</ValidationRule>