sfSandBoxCode/force-app/main/default/objects/Renconciling_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Supplier__c</columns>
    <columns>Expense_Description__c</columns>
    <columns>Item_Amount__c</columns>
    <columns>Transaction_Charge__c</columns>
    <columns>VAT__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Special_Payment_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>